// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="boxed-group"
>
  <h2>
    permissions.page
  </h2>
  <div
    className="boxed-group-inner"
  >
    <p
      className="note"
    >
      quality_profiles.default_permissions
    </p>
    <div
      className="big-spacer-top"
    >
      <i
        className="spinner"
      />
    </div>
  </div>
</div>
`;

exports[`renders 2`] = `
<div
  className="boxed-group"
>
  <h2>
    permissions.page
  </h2>
  <div
    className="boxed-group-inner"
  >
    <p
      className="note"
    >
      quality_profiles.default_permissions
    </p>
    <div
      className="big-spacer-top"
    >
      <ProfilePermissionsUser
        key="luke"
        onDelete={[Function]}
        profile={
          {
            "key": "sonar-way",
            "language": "js",
            "name": "Sonar way",
          }
        }
        user={
          {
            "login": "luke",
            "name": "Luke Skywalker",
            "selected": false,
          }
        }
      />
      <ProfilePermissionsGroup
        group={
          {
            "name": "Lambda",
          }
        }
        key="Lambda"
        onDelete={[Function]}
        profile={
          {
            "key": "sonar-way",
            "language": "js",
            "name": "Sonar way",
          }
        }
      />
      <div
        className="text-right"
      >
        <Button
          onClick={[Function]}
        >
          quality_profiles.grant_permissions_to_more_users
        </Button>
      </div>
    </div>
  </div>
</div>
`;
